--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node express.js"
+    "start": "node server.js"
   },
   "author": "Fredo",
   "license": "ISC",
