--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Application for writing, deleting, and viewing notes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fredo",
   "license": "ISC",
