--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Application for writing, deleting, and viewing notes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Fredo",
   "license": "ISC",
